//standard proto file
syntax = "proto3";

package greet;
option go_package="greetpb";

// Greeting message
message Greeting {
    string first_name = 1; // where 1 is the tag number
    string last_name = 2;
}

//Request message
message GreetRequest {
    Greeting greeting =1 ;
}

//Response message
message GreetResponse {
    string response = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string response = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string response = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string response = 1;
}

service GreetService {
    //Uniary API -> takes GreetRequest message and responds with GreetResponse message
    rpc Greet (GreetRequest) returns (GreetResponse) {};

    //server streaming 
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // client streaming
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {};

    // Bi Directional
    rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}
